Update text and image

--- a/index.html
+++ b/index.html
@@ -71,6 +71,43 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi maiores ratione inventore autem reiciendis saepe nostrum rerum natus ullam ex ipsam dolores vel hic, doloribus distinctio odio adipisci soluta amet ipsum rem. Illum consectetur veritatis dicta repellat harum. Fugiat quidem, hic praesentium soluta inventore facilis! Nemo nihil eligendi voluptate voluptatum blanditiis quas autem rerum recusandae doloremque rem molestiae, repellendus officiis ipsum asperiores, velit sint natus debitis voluptatem corrupti earum. Aspernatur nulla animi labore accusantium? Officia voluptate minima corrupti repudiandae quasi ipsum quia beatae corporis saepe delectus harum ducimus, suscipit mollitia, facilis debitis! Repellat a illo dicta blanditiis at sed minima, quos cupiditate. Officiis facere deleniti voluptate repellat eos asperiores, modi ut illum, debitis repudiandae quidem dolor odit minus ab. Excepturi vel nulla repudiandae harum natus quos dolore minus tempore quaerat facere, est eius ex ab officiis dicta soluta, magnam culpa recusandae deserunt! Ipsa, quos sequi ad architecto quidem iure ullam veniam odio porro repellendus unde laudantium maxime laborum deleniti excepturi reprehenderit quisquam distinctio perspiciatis dolores alias ab in eveniet enim ratione. Deserunt, ipsum consequuntur. Odit illum voluptas fugit aperiam modi, deleniti veritatis consequuntur et quidem error, quisquam ratione impedit cupiditate neque animi in illo optio nisi accusamus voluptates dignissimos. Officiis porro tenetur itaque incidunt? Minus ducimus, inventore cum quae nisi placeat dolorum minima reiciendis. Cumque sunt tenetur asperiores facilis eveniet saepe error ipsa libero voluptatibus sit fugiat esse, est natus, alias modi, beatae nulla consectetur ea provident sint praesentium reiciendis. Aut fugit aperiam incidunt ea excepturi sint delectus reiciendis, atque iure dolor praesentium aliquam dolores. Fuga, fugit voluptatibus itaque velit magnam optio, unde, qui vero voluptate aperiam a ad nisi error! Eaque ratione cupiditate possimus reprehenderit, temporibus in, sed, odio eius exercitationem fugit officiis. Rerum reprehenderit voluptas quia tempore tenetur ea fuga vero esse sequi veritatis adipisci alias quaerat, ducimus excepturi illo facere fugit, reiciendis suscipit distinctio aspernatur dolores repellat! Doloribus, a. Illum quia explicabo ullam quae dolorum architecto sed laboriosam accusamus adipisci qui eveniet, unde temporibus, blanditiis amet placeat deserunt dolorem possimus sapiente at perferendis nisi perspiciatis ipsum. Qui inventore, cum eveniet assumenda blanditiis, tenetur iste quasi pariatur sed delectus possimus. Vitae reprehenderit aliquid voluptatibus voluptas praesentium quas nobis accusamus ratione possimus accusantium eos eligendi, a sapiente hic sunt modi explicabo nihil nemo iure, iste animi quos sequi necessitatibus! Voluptates accusamus quaerat ullam deserunt molestias, assumenda doloribus ducimus nemo recusandae quo beatae, similique reiciendis temporibus itaque eos omnis maiores nobis a optio doloremque sunt distinctio quos. Fugit minima voluptate maiores vel veniam? Obcaecati consequuntur pariatur iusto in minima illo repellat! Quisquam tempora necessitatibus ab, at labore sunt aliquid adipisci quidem reprehenderit mollitia rerum dolorem quo aut impedit, nostrum dolore ea aliquam, assumenda similique voluptatum cumque! Placeat obcaecati dolorem cumque neque, quidem similique veniam tenetur distinctio consectetur perferendis molestias delectus assumenda. Quia amet fugit tempora, deleniti obcaecati magni reprehenderit quis repudiandae facere laborum possimus quasi cum odit dolorum eius, debitis molestiae adipisci eaque aspernatur quo vitae quidem. Quas, accusamus esse quaerat aliquid, eligendi consequuntur repellat recusandae delectus temporibus accusantium eius similique ex tempora aspernatur ullam rem? Distinctio nesciunt earum, libero doloremque pariatur facilis dolorem quae minima quisquam soluta, ipsam consectetur sunt voluptate ab. Facilis autem consectetur reiciendis quisquam. Eius reprehenderit iste, impedit vitae sapiente sed minima optio tenetur neque iure quasi quos repellendus tempore expedita! Accusamus aspernatur earum fuga quod quas voluptatem illum tempore quisquam nostrum doloremque. Doloremque expedita aspernatur voluptates laborum id nihil consequuntur suscipit blanditiis, dolor hic fugit ea sint molestiae consequatur distinctio sequi pariatur nobis quis amet fuga, harum iure non. Iste aspernatur consectetur tempore, omnis eaque totam eius voluptatum nam corrupti, ipsam ex tenetur? Ullam ut quod perferendis quia repellendus, consequatur, eos ab similique possimus eum placeat ex delectus. Praesentium, nam minima dolorem laboriosam sunt provident eius tenetur sequi consequatur a aperiam nesciunt assumenda, molestiae similique culpa placeat atque. Ipsa incidunt nostrum nihil minima ab inventore veniam itaque nesciunt labore dicta temporibus exercitationem natus dolore quo asperiores eveniet, illo ea vitae? Magnam, incidunt tempora dolore eveniet commodi, totam excepturi modi accusantium, dolorum quo saepe facilis qui voluptate assumenda vitae recusandae! Perferendis molestias incidunt optio labore quaerat consectetur magnam? Earum sequi consectetur inventore beatae placeat exercitationem incidunt modi excepturi, asperiores minus at veritatis, aliquid et aliquam eius! Quos, soluta error. Debitis numquam, asperiores, totam necessitatibus dolores quidem porro corporis, dolore doloremque architecto expedita officia libero commodi aliquid! Explicabo ut aut maxime voluptatem, voluptates culpa. Quia dolorum, tempora similique quo inventore quam molestias possimus aperiam eaque voluptate alias officia sit unde recusandae ad labore et architecto quidem quasi cum! Impedit mollitia, necessitatibus aliquid ullam vero sed nemo praesentium rerum fuga laborum ut eos adipisci rem assumenda, unde enim! Aperiam veritatis non nemo id eum, cum culpa iusto, quaerat, deleniti aut repudiandae sit aspernatur officia neque. Velit aliquid veniam soluta culpa at cum explicabo cumque corrupti tempora tempore voluptas porro ipsa eum magni in quis quos aliquam necessitatibus quam eligendi sapiente id, dicta blanditiis et. Minus quidem impedit autem illum facilis iusto molestias nisi ratione veniam labore praesentium, corporis tempora dicta dignissimos est quo. Exercitationem vel perferendis velit sit repellendus ea quaerat deleniti natus rem. Qui, officia vel aliquid maiores distinctio cupiditate tempora voluptatum? Similique blanditiis provident aliquid voluptates veritatis consectetur laboriosam nulla tempore at debitis enim omnis vero quae optio dignissimos, perferendis nisi exercitationem alias fugiat! Temporibus nam laudantium unde maxime facere. Enim placeat ipsam, pariatur veritatis iste vitae temporibus vel et laudantium commodi perspiciatis est magnam numquam fugiat quod praesentium labore. Qui quos magnam recusandae rem neque error veritatis in ut fugiat quod, nam enim distinctio tenetur? Repellat tenetur dignissimos ipsam quos distinctio vitae cum necessitatibus voluptates, quasi voluptate, repudiandae adipisci eligendi. Neque quidem tempore, ducimus vel natus obcaecati quae iure assumenda veritatis doloremque vero numquam reiciendis incidunt mollitia dicta accusantium ab. Nemo iure, incidunt consequatur soluta maiores libero fuga a. Maxime repellat, tenetur animi itaque reprehenderit enim, at quod recusandae nulla iste omnis minus ea incidunt nemo quos atque provident, magni eligendi ipsam nostrum suscipit sit. Eius, sunt voluptatem aliquam illo tenetur quidem saepe voluptas eum.</p>
 </div>
 
+
+
+
+<div class="test">
+    <div class="tests">
+ 
+             <h2>Get Leatest Update By Subscribe<br>
+               0ur Newslater </h2>
+               
+               
+               <button type="submit" class="btn">Shop Now  </button>
+
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="footer">
     <div class="container">
         <div class="row">
