--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />">
 </head>
 <body>
-   <div class="header" >
+   <header class="header" >
 
 
     <div class="logo">
@@ -16,7 +16,7 @@
         <img src="./image/Hekto.svg">
     </div>
   
-<div class="list">
+<nav class="list">
 
 <ul>
 <li>
@@ -47,7 +47,7 @@
 </ul>
 
 
-</div>
+</nav>
 
 <div class="form">
 
@@ -65,12 +65,12 @@
 
 
 
-</div>
+   </header>
+
+<main>
 
 
-
-
-<div class="featured">
+<section class="featured">
     <h2 class="title">Featured Products</h2>
 
      <div class="card">
@@ -128,7 +128,7 @@
 
 
 </div>
-</div>
+</section>
 
 
 
@@ -136,29 +136,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="test">
+<section class="test">
     <div class="tests">
  
              <h2>Get Leatest Update By Subscribe<br>
@@ -169,7 +147,13 @@
 
 </div>
 
-</div>
+</section>
+
+
+
+
+
+</main>
 
 
 
@@ -178,21 +162,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="footer">
+<footer class="footer">
     <div class="container">
         <div class="row">
 
@@ -220,7 +190,7 @@
             </div>
             <div class="right-side">
                 <div class="row">
-                  <div class="footer-item">
+                  <nav class="footer-item">
                     <h2>Catagories</h2>
  
                     <lu class="footer-list">
@@ -248,9 +218,9 @@
 
                     </lu>
 
-                </div>
+                  </nav>
  
-               <div class="footer-item">
+               <nav class="footer-item">
                 <h2>Customer Care</h2>
 
                     <lu class="footer-list">
@@ -276,9 +246,9 @@
 
                     </lu>
 
-                </div>
+               </nav>
 
-                      <div class="footer-item">
+                      <nav class="footer-item">
                         <h2>Pages</h2>
 
                     <lu class="footer-list" >
@@ -310,7 +280,7 @@
 
                     </lu>
 
-                </div>
+                      </nav>
               </div>
 
 
@@ -324,6 +294,6 @@
 
     </div>
 
-</div>
+</footer>
 </body>
 </html>
