--- a/index.html
+++ b/index.html
@@ -70,6 +70,76 @@
 <main>
 
 
+<section class="hero">
+  <div class="hero-container">
+
+  
+    <div class="left">
+      <span class="small-title">Best Furniture For Your Castle...</span>
+      <h1>
+        New Furniture Collection<br>
+        Trends in 2020
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Magna in est adipiscing in phasellus non in justo.
+      </p>
+      <button class="btn">Shop Now</button>
+    </div>
+
+    <div class="right">
+    <div class="discount">50%<br>off</div>
+      <div class="circle"></div>
+      <img src="./image/chairhero.png" alt="chair">
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <section class="featured">
     <h2 class="title">Featured Products</h2>
 
