--- a/index.html
+++ b/index.html
@@ -203,39 +203,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <section class="featured">
     <h2 class="title">Featured Products</h2>
 
@@ -295,6 +262,122 @@
 
 </div>
 </section>
+
+
+<section class="offer">
+  <div class="container">
+    <h2 class="offer-title">What Shopex Offer!</h2>
+
+    <div class="offer-grid">
+
+      <div class="offer-card active">
+        <div class="offer-icon">
+         
+          <img src="./image/free-delivery 1.png" alt="Support">
+        </div>
+        <h3>24/7 Support</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus gravida.</p>
+      </div>
+
+      <div class="offer-card">
+        <div class="offer-icon">
+          <img src="./image/premium-quality 1.png" alt="Support">
+        </div>
+        <h3>24/7 Support</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus gravida.</p>
+      </div>
+
+      <div class="offer-card">
+        <div class="offer-icon">
+          <img src="./image/cashback 1.png" alt="Support">
+        </div>
+        <h3>24/7 Support</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus gravida.</p>
+      </div>
+
+      <div class="offer-card">
+        <div class="offer-icon">
+          <img src="./image/24-hours-support 1.png" alt="Support">
+        </div>
+        <h3>24/7 Support</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus gravida.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+<section class="trending-products">
+  <div class="container">
+    <h2 class="tp-title">Trending Products</h2>
+
+    <div class="tp-grid">
+
+      <div class="tp-card">
+        <div class="tp-img">
+          <img src="./image/image 1171.png" alt="Cantilever chair">
+        </div>
+       <div class="tp-info">
+            <h3 class="tp-name">Cantilever chair</h3>
+           <p class="tp-price">
+         <span class="tp-new">$26.00</span>
+         <span class="tp-old">$42.00</span>
+    </p>
+  </div>
+    </div>
+
+      <div class="tp-card">
+        <div class="tp-img">
+          <img src="./image/image 1170.png" alt="Cantilever chair">
+        </div>
+       <div class="tp-info">
+                 <h3 class="tp-name">Cantilever chair</h3>
+                 <p class="tp-price">
+             <span class="tp-new">$26.00</span>
+            <span class="tp-old">$42.00</span>
+    </p>
+  </div>
+    </div>
+
+      <div class="tp-card">
+        <div class="tp-img">
+          <img src="./image/image31.png" alt="Cantilever chair">
+        </div>
+        <div class="tp-info">
+            <h3 class="tp-name">Cantilever chair</h3>
+            <p class="tp-price">
+         <span class="tp-new">$26.00</span>
+         <span class="tp-old">$42.00</span>
+    </p>
+  </div>
+    </div>
+
+      <div class="tp-card">
+        <div class="tp-img">
+          <img src="./image/ima2.png" alt="Cantilever chair">
+        </div>
+        <div class="tp-info">
+               <h3 class="tp-name">Cantilever chair</h3>
+               <p class="tp-price">
+            <span class="tp-new">$26.00</span>
+           <span class="tp-old">$42.00</span>
+    </p>
+  </div>
+    </div>
+
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
 
 
 
