--- a/index.html
+++ b/index.html
@@ -372,6 +372,52 @@
 
 
 
+<section class="top-categories">
+  <div class="container">
+    <h2 class="tc-title">Top Categories</h2>
+
+    <div class="tc-grid">
+
+      <div class="tc-card active">
+        <div class="tc-circle">
+          <img src="./image/image7.png" alt="Mini LCW Chair">
+
+          <a class="tc-btn" href="#">View Shop</a>
+        </div>
+        <h3 class="tc-name">Mini LCW Chair</h3>
+        <p class="tc-price">$56.00</p>
+    </div>
+
+      <div class="tc-card">
+        <div class="tc-circle">
+          <img src="./image/chair.png" alt="Mini LCW Chair">
+          <a class="tc-btn" href="#">View Shop</a>
+        </div>
+        <h3 class="tc-name">Mini LCW Chair</h3>
+        <p class="tc-price">$56.00</p>
+    </div>
+
+      <div class="tc-card">
+        <div class="tc-circle">
+          <img src="./image/image 1171.png" alt="Mini LCW Chair">
+          <a class="tc-btn" href="#">View Shop</a>
+        </div>
+        <h3 class="tc-name">Mini LCW Chair</h3>
+        <p class="tc-price">$56.00</p>
+    </div>
+
+      <div class="tc-card">
+        <div class="tc-circle">
+          <img src="./image/image7.png" alt="Mini LCW Chair">
+          <a class="tc-btn" href="#">View Shop</a>
+        </div>
+        <h3 class="tc-name">Mini LCW Chair</h3>
+        <p class="tc-price">$56.00</p>
+    </div>
+
+    </div>
+  </div>
+</section>
 
 
 
